# fastapi-simple-graphql

./: README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/database/: __init__.py  db.py  models.py  utils.py
app/schema/: __init__.py  articles.py  depends.py  schema.py  users.py
app/tests/: utils.py
app/tests/schema/: test_users.py
