[project]
name = "fastapi-simple-graphql"
version = "0.1.0"
description = ""
authors = [
    {name = "Danielk84",email = "daniel-k84@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "strawberry-graphql[fastapi] (>=0.249, <0.250) ; python_version >= '3.9' and python_version < '4.0'",
    "bcrypt (>=4.2.1,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "ipython (>=8.32.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
